# Diplo

./: .env.example  .gitignore  CLAUDE.md  GUIDE.md  LICENSE  README.md  pyproject.toml
prompts/: assistant_system.md  triage_system.md
src/: actions.py  assistant.py  automations.py  beeper_client.py  config.py  contacts.py  conversation.py  feedback.py  llm.py  llm_logger.py  main.py  message_cache.py  triage.py
src/calendar/: __init__.py  base.py  google.py  manager.py
src/channels/: base.py  telegram.py
src/email/: __init__.py  base.py  cache.py  gmail.py  manager.py  setup.py
tests/: test_actions.py  test_assistant.py  test_automations.py  test_backfill.py  test_beeper_client.py  test_calendar.py  test_channels.py  test_contacts.py  test_conversation.py  test_feedback.py  test_image_description.py  test_imessage.py  test_llm.py  test_main.py  test_message_cache.py  test_network_filter.py  test_normalize_text.py  test_observability.py  test_triage_live.py
